# stuff

./: pyproject.toml  test_production_integration.py
examples/: circles_avatar_example.py  phase1_example.py  phase2_advanced_transfer.py
src/circles_sdk/: __init__.py  avatar.py
src/circles_sdk/core/: __init__.py  config.py  exceptions.py  flow_matrix.py  token_info.py  types.py
src/circles_sdk/pathfinding/: __init__.py  client.py  path_processor.py
src/circles_sdk/transactions/: __init__.py  builder.py
src/circles_sdk/transfers/: __init__.py  advanced.py  simple.py
tests/: __init__.py
tests/unit/: test_pathfinder_client.py  test_simple_transfer.py
